[package]

name = "lru-size-cache"
version = "0.1.0"
license = "MIT/Apache-2.0"
description = "A cache that holds a limited size of key-value pairs"
authors = [
    "Stepan Koltsov <stepan.koltsov@gmail.com>",
]

repository = "https://github.com/dippi/lru-cache"
keywords = ["data-structures"]
readme = "README.md"

[dependencies]
linked-hash-map = "^0.2"
